--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <div class="text">
             <h1>بسم الله الرحمن الرحيم</h1>
             <p>مرحبا بكم في موقعكم الفضل في الصفحة الرئيسية....</p>
+            <p>الموقع تحت التطوير والانشاء</p>
         </div>
     </div>
 </body>
