--- a/web.html
+++ b/web.html
@@ -23,7 +23,7 @@
         </div>
         <div class="text">
             <h1>بسم الله الرحمن الرحيم</h1>
-            <p>مرحبا بكم في موقعكم الفضل في الصفحة الرئيسية....</p>
+            <p>مرحبا بكم في موقعكم الفضل في الصفحة الرئيسية</p>
         </div>
     </div>
 </body>
